[package]
authors = ["Jordan Yelloz <jordan@yelloz.me>"]
edition = "2018"
readme = "README.md"
name = "tomu-usbtool"
license = "MIT"
version = "0.1.0"

[dependencies]
cortex-m = "0.6"
cortex-m-rtic = "0.5"
cortex-m-semihosting = "0.3"
panic-halt = "0.2"
usbd-serial = "0.1"
paste = "1"
[dependencies.embedded-hal]
version = "0.2"
features = ["unproven"]
[dependencies.usb-device]
version = "0.2"
[dependencies.usbd-hid]
version = "0.5"
[dependencies.efm32hg-pac]
path = "../efm32hg-pac"
features = ["rt"]
[dependencies.efm32hg-usbd]
path = "../efm32hg-usbd"


# this lets you use `cargo fix`!
[[bin]]
name = "tomu-usbtool"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
